<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoFragment"
        android:textColor="@color/tx"
        android:layout_gravity="center_horizontal"
        android:textSize="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoBM"
        android:textColor="@color/tx"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/tx"
        android:id="@+id/history_BTN"
        android:text="@string/history"
        android:textSize="15dp"
        app:cornerRadius="30dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/logout"
        android:textSize="11dp"
        android:textColor="@color/tx"
        app:cornerRadius="30dp"
        android:id="@+id/back_Btn"
        android:onClick="goBack">
    </com.google.android.material.button.MaterialButton>
</LinearLayout>