<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    android:layout_margin="10dp"
    android:backgroundTint="@color/bt">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">
            <ImageView
                android:layout_width="250dp"
                android:layout_height="170dp"
                android:padding="10dp"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/img_IV"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/name_TV"
                android:layout_marginLeft="10dp"
                android:text="Название"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:textSize="25dp"
                android:textColor="@color/tx"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/weight_TV"
                android:layout_marginLeft="10dp"
                android:text="Граммы"
                android:textColor="@color/tx"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/cost_TV"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:text="Цена"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-black"
                    android:textSize="16dp"
                    android:textColor="@color/tx"/>
                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/tx"
                    android:text="@string/more"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:textSize="11dp"
                    app:cornerRadius="30dp"
                    android:id="@+id/about_Btn"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:backgroundTint="@color/tx"
                android:text="@string/plus"
                android:layout_marginTop="35dp"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:cornerRadius="30dp"
                android:id="@+id/plus_Btn"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/n_ET"
                android:text="0"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="2dp"
                android:textSize="30dp"
                android:background="@color/white"
                android:textColor="@color/tx"
                android:layout_gravity="center_horizontal"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:backgroundTint="@color/tx"
                android:text="@string/minus"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="30dp"
                app:cornerRadius="30dp"
                android:id="@+id/minus_Btn"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>