<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/bc">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:textColor="@color/tx"
            android:layout_gravity="center_horizontal"
            android:textSize="40dp"
            android:layout_marginTop="40dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Адрес"
            android:layout_margin="10dp"
            android:textColorHint="@color/tx"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adress_ET"
                android:background="@color/white"
                android:textColor="@color/tx"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Юр. лицо"
            android:layout_margin="10dp"
            android:textColorHint="@color/tx"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/business_ET"
                android:background="@color/white"
                android:textColor="@color/tx"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Дата"
            android:layout_margin="10dp"
            android:textColorHint="@color/tx"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date_ET"
                android:background="@color/white"
                android:textColor="@color/tx"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Часы работы"
            android:layout_margin="10dp"
            android:textColorHint="@color/tx"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time_ET"
                android:textColor="@color/tx"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Комментарии"
            android:layout_margin="10dp"
            android:textColorHint="@color/tx"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/comments_ET"
                android:textColor="@color/tx"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:id="@+id/order_TV"
            android:layout_margin="10dp"
            android:text="    Сумма"
            android:textColor="@color/tx"
            android:background="@color/white"
            android:textSize="16dp"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/tx"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:cornerRadius="30dp"
            android:onClick="getOrder"/>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/back"
            android:textSize="11dp"
            android:textColor="@color/tx"
            app:cornerRadius="30dp"
            android:id="@+id/back_Btn"
            android:onClick="goBack">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
</LinearLayout>